parfait/components/popups.css
/* ... */
#unified-extensions-messages-container {
  --arrowpanel-menuitem-margin: 2px;
}
#unified-extensions-view {
  --menu-panel-width-wide: var(--pf-extensions-width) !important;

  toolbarseparator,
  .panel-header {
    display: none !important;
  }
  .panel-subview-body {
    margin-inline: 8px;
    margin-block: 4px 6px;
  }
}
#unified-extensions-area,
.unified-extensions-list {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 8px;
  --arrowpanel-menuitem-margin: 0;
}
.unified-extensions-list {
  margin-top: 8px;
  filter: grayscale(1);

  .unified-extensions-item {
    background-color: color-mix(in srgb, var(--pf-toolbar-bgcolor), transparent 70%);
    border-radius: var(--pf-border-radius-md) !important;
  }
}
.unified-extensions-item {
  margin-block: 0 !important;
}
.unified-extensions-item-menu-button,
.unified-extensions-item-contents {
  display: none;
}
.unified-extensions-item-action-button {
  justify-content: center !important;
  --arrowpanel-menuitem-border-radius: var(--pf-border-radius-md);
  --button-background-color-ghost: var(--pf-toolbar-bgcolor);
  --uei-icon-size: 16px;
}
.unified-extensions-item-icon,
.unified-extensions-item .webextension-browser-action.subviewbutton > .toolbarbutton-badge-stack {
  margin-inline-end: 0 !important;
}
#unified-extensions-manage-extensions {
  border: 1px solid var(--pf-border-color);

  .toolbarbutton-text {
    text-align: center !important;
  }
}

/* status panel */
#statuspanel-label {
  margin-inline: 8px !important;
  margin-bottom: 8px !important;
  padding: 4px 10px !important;
  border: 1px solid light-dark(rgba(0, 0, 0, 0.125), rgba(255, 255, 255, 0.125)) !important;
  border-radius: var(--pf-border-radius-md) !important;

  @media -moz-pref("parfait.bg.accent-color") {
    background-color: color-mix(in srgb, var(--pf-accent-color), var(--pf-panel-bgcolor) 80%) !important;
  }
}

/* context menu */
@media not (-moz-platform: macos) {
  menupopup {
    --panel-padding: 5px 4px !important;
    color: var(--panel-color);
  }
  menu, menuitem, menucaption {
    --menuitem-border-radius: 5px !important;
    --menuitem-padding: 3px 10px;
    --menuitem-margin-inline: 1px;
    --menuitem-margin: 1px var(--menuitem-margin-inline);
  }
  :root:not([lwtheme]) {
    menu, menuitem {
      &:where([_moz-menuactive]:not([disabled="true"])) {
        background: color-mix(in srgb, var(--pf-accent-color), black 20%) !important;
        color: #fff !important;
      }
    }
  }
  menuseparator {
    padding-inline: 10px !important;
  }
  menupopup > menu::after {
    background-image: var(--pf-icon-chevron-right-small) !important;
    --menu-arrow-size: 12px;
  }
  menuitem[badge]::after {
    background-color: var(--pf-toolbar-bgcolor-active) !important;
    color: currentColor !important;
    border: 0 !important;
    --space-xxsmall: 1px;
    --border-radius-small: 999px;
  }
  #context-navigation {
    flex-direction: column;
    align-items: start;

    .menuitem-iconic {
      width: calc(100% - (var(--menuitem-margin-inline) * 2));
      justify-content: start !important;
      padding: var(--menuitem-padding) !important;
      margin: var(--menuitem-margin) !important;

      &::after { content: attr(aria-label); }
      .menu-icon { display: none !important; }
    }
  }
}
panel toolbarseparator {
  --panel-separator-color: color-mix(in srgb, currentColor 12%, transparent);
}
/* native panels */
@media (-moz-platform: macos) or (-moz-windows-mica-popups) {
  panel[type="arrow"] {
    transition: none !important;
    appearance: auto !important;
    -moz-default-appearance: menupopup;
    --panel-background: var(--pf-panel-bgcolor-transparent) !important;
    --panel-border-color: transparent !important;
    --panel-shadow-margin: 0 !important;
    --panel-border-radius: 0 !important;
  }
}
/* context menu: icons */
#protections-popup-mainView .subviewbutton-nav:not(.notFound),
.widget-overflow-list .subviewbutton-nav,
.PanelUI-subView .subviewbutton-nav {
  &::after {
    content: var(--pf-icon-chevron-right-small) !important;
    fill-opacity: 0.4 !important;
  }
}
#appMenu-fullscreen-button2 {
  list-style-image: var(--pf-icon-fullscreen) !important;

  &[checked] {
    list-style-image: var(--pf-icon-fullscreen-exit) !important;
  }
}

/* manage tab group */
.tab-group-editor-panel {
  .panel-header {
    gap: 8px;
    text-align: left !important;
    justify-content: unset !important;
    --heading-font-size-xlarge: var(--pf-font-size-1);
    --arrowpanel-menuitem-margin-inline: 4px 0;

    &::before {
      content: var(--pf-icon-tabs);
      fill: var(--pf-accent-text-color);
      -moz-context-properties: fill;
    }
  }
  .tab-group-editor-name {
    & > label {
      color: var(--pf-text-color-inactive);
      font-weight: 600;
    }
    & > input[type="text"] {
      --input-border-color: var(--pf-border-color);
      --input-bgcolor: var(--pf-input-bgcolor);
    }
  }
  .panel-body.tab-group-editor-swatches {
    --space-medium: 2px;
  }
  .tab-group-editor-swatch {
    --border-radius-medium: 99px;
  }
  @media not -moz-pref("parfait.tabs.groups.color") {
    .panel-body.tab-group-editor-swatches {
      display: none !important;
    }
    .panel-body.tab-group-editor-swatches + toolbarseparator {
      padding-top: 0 !important;
    }
  }
  .subviewbutton {
    margin-inline: -4px !important;
    --arrowpanel-menuitem-padding: 6px 8px;
  }
  toolbarseparator:not(.tab-group-edit-mode-only) {
    display: none;
  }
  toolbarseparator:is(.tab-group-edit-mode-only, #tab-group-suggestions-separator) {
    margin-inline: calc(0px - var(--panel-padding));
    --panel-separator-color: var(--pf-border-color-light);
  }
  .tab-group-edit-actions + toolbarseparator {
    display: none !important;
  }
}
/* ... */

